# rules_workflows

./: .bazeliskrc  .bazelrc  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  BUILD.bazel  CONTRIBUTING.md  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bzlmod
.aspect/workflows/: config.yaml
.bcr/: metadata.template.json  presubmit.yml  source.template.json
.github/workflows/: buildifier.yaml  ci.bazelrc  ci.yaml  release.yml  release_prep.sh
docs/: BUILD.bazel  rules.md
e2e/smoke/: MODULE.bazel  README.md  WORKSPACE.bazel  WORKSPACE.bzlmod
e2e/smoke/.circleci/: BUILD.bazel  aspect-workflows-config.yml  config.yml  user-config.yml
examples/circleci/: README.md
examples/circleci/merged_stamped_config/: BUILD.bazel  README.md  aspect-workflows-config.yml  config.yml  user-config-a.yml  user-config-b.yml
examples/circleci/merged_unstamped_config/: BUILD.bazel  README.md  config.yml
examples/circleci/standalone_config/: BUILD.bazel  README.md  config.yml
tools/format/: BUILD.bazel
workflows/: BUILD.bazel  defs.bzl  dependencies.bzl  repositories.bzl
workflows/private/: BUILD.bazel  circleci.bzl  internal_deps.bzl  is_bazel_7_or_greater.bzl  maybe.bzl  versions.bzl
workflows/tests/: versions_test.bzl
