load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load(":is_bazel_7_or_greater.bzl", "is_bazel_7_or_greater")

bzl_library(
    name = "versions",
    srcs = ["versions.bzl"],
    visibility = ["//workflows:__subpackages__"],
)

bzl_library(
    name = "circleci",
    srcs = ["circleci.bzl"],
    visibility = ["//workflows:__subpackages__"],
    deps = [
        "@aspect_bazel_lib//lib:write_source_files",
    ] + (["@bazel_tools//tools/build_defs/repo:cache.bzl"] if is_bazel_7_or_greater() else []),
)

bzl_library(
    name = "maybe",
    srcs = ["maybe.bzl"],
    visibility = ["//workflows:__subpackages__"],
    deps = [
        "@bazel_tools//tools/build_defs/repo:http.bzl",
        "@bazel_tools//tools/build_defs/repo:utils.bzl",
    ],
)

bzl_library(
    name = "internal_deps",
    srcs = ["internal_deps.bzl"],
    visibility = ["//workflows:__subpackages__"],
    deps = [":maybe"],
)

bzl_library(
    name = "is_bazel_7_or_greater",
    srcs = ["is_bazel_7_or_greater.bzl"],
    visibility = ["//workflows:__subpackages__"],
)
