load("@aspect_rules_workflows//workflows:defs.bzl", "workflows_circleci_config", "workflows_circleci_merged_config")

workflows_circleci_config(
    name = "aspect-workflows-config",
    circleci_org = "aspect-build",
)

workflows_circleci_merged_config(
    name = "config",
    circleci_config_files = [
        ":user-config-a.yml",
        ":user-config-b.yml",
        ":aspect-workflows-config",
    ],
)
